Added navbar and mobile content navigation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,39 @@
 </head>
 </html>
 <body>
-<div class="container">
-    <section class="header">
-    </section>
-</div>
+<section class="header">
+    <div class="container mobile-nav">
+        <div class="row">
+            <div class="twelve columns">
+                <img class="menu-icon" src="img/burger.png" />
+                <span class="logo">DRINKLY</span>
+                <img class="shopping-cart" src="img/cart.png" />
+            </div>
+        </div>
+    </div>
+    <div class="container desktop-nav">
+        <div class="row">
+            <div class="four columns">
+                <span class="logo">DRINKLY</span>
+            </div>
+            <div class="four columns">
+                <input type="text" class="search-field" placeholder="What are you looking for?" />
+            </div>
+            <div class="four columns">
+                <img class="shopping-cart" src="img/cart.png" />
+                <span class="login"><a href="#">LOG IN / SIGN UP</a></span>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="twelve columns">
+                <span class="mobile-dropdown-link left">SHOP</span>
+                <span class="mobile-dropdown-link right">MAGAZINE</span>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
