Finished first draft of design

--- a/index.html
+++ b/index.html
@@ -44,5 +44,36 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="seven columns">
+                <div class="teaser">
+                    <img src="http://www.placehold.it/539x438"  alt="Image" class="teaser-image">
+                    <p class="top-headline">More than a digestive</p>
+                    <h2 class="big-headline">Enjoy our Selection of Finest Bitters</h2>
+                    <p class="sub-headline">Stock your bar with exclusive Bitters to be ready for your next coctail party.</p>
+                    <button class="button">Shop now</button>
+                </div>
+            </div>
+            <div class="five columns">
+                <div class="teaser teaser-small">
+                    <img src="http://www.placehold.it/379x228" alt="Image" class="teaser-image">
+                    <p class="top-headline">Edinburgh at night</p>
+                    <h2 class="big-headline">Take a Walk on the Wild Side in Scotlands Beautiful Capital</h2>
+                    <a class="action-link">Read our travel guide</a>
+                </div>
+                <div class="teaser teaser-small">
+                    <img src="http://www.placehold.it/379x228" alt="Image" class="teaser-image">
+                    <p class="top-headline">Delicious</p>
+                    <h2 class="big-headline">You Deserve Some Very Special Desserts</h2>
+                    <a class="action-link">Read our recipes</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay">
+        <input type="text" class="search-field" placeholder="What are you looking for?" /><br/>
+        <span class="login"><a href="#">LOG IN / SIGN UP</a></span>
+    </div>
 </section>
 </body>
